@@ -1,18 +1,18 @@
 object TwainSelectSource: TTwainSelectSource
   Left = 451
-  Height = 317
+  Height = 321
   Top = 220
   Width = 458
   BorderStyle = bsSizeToolWin
   Caption = 'Select Twain Source'
-  ClientHeight = 317
+  ClientHeight = 321
   ClientWidth = 458
   Position = poScreenCenter
   LCLVersion = '3.99.0.0'
   object panelButtons: TPanel
     Left = 0
     Height = 40
-    Top = 277
+    Top = 281
     Width = 458
     Align = alBottom
     BevelOuter = bvSpace
@@ -20,12 +20,11 @@ object TwainSelectSource: TTwainSelectSource
     ClientWidth = 458
     TabOrder = 0
     object btCancel: TBitBtn
-      Left = 298
-      Height = 30
-      Top = 4
-      Width = 75
+      Left = 286
+      Height = 34
+      Top = 2
+      Width = 87
       Anchors = [akRight, akBottom]
-      Cancel = True
       DefaultCaption = True
       Kind = bkCancel
       ModalResult = 2
@@ -33,8 +32,8 @@ object TwainSelectSource: TTwainSelectSource
     end
     object btOk: TBitBtn
       Left = 377
-      Height = 30
-      Top = 4
+      Height = 34
+      Top = 2
       Width = 75
       Anchors = [akRight, akBottom]
       Default = True
@@ -43,20 +42,161 @@ object TwainSelectSource: TTwainSelectSource
       ModalResult = 1
       TabOrder = 1
     end
+    object btRefresh: TBitBtn
+      Left = 8
+      Height = 34
+      Top = 2
+      Width = 101
+      Caption = 'Refresh'
+      Glyph.Data = {
+        36100000424D3610000000000000360000002800000020000000200000000100
+        2000000000000010000000000000000000000000000000000000FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00000000010053003400510081005000B5005100CF05590CEA025303ED0051
+        00D5005100BD005100850051003F00660004FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0000550005005A
+        006F06630BE61B8636FF0A8A13FF0BAC16FF0AC313FF18E130FF18E82FFF01CD
+        01FF03AC05FF038D07FF198B31FF015702E500570055FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF000058005006660ADE0677
+        0CFF25AD48FF1AB233FF15BE29FF11CB21FF0DD719FF09E211FF06EC0BFF05EE
+        0AFF07E80EFF0BDD15FF11D21FFF22BB43FF147E28FF005900BF0059001EFFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF000056008C117623FE1CA138FF14A3
+        27FF18A82EFF1BAE33FF17BA2BFF13C524FF0FD01DFF0CD917FF0AE013FF09E1
+        12FF0BDD15FF0DD51AFF11CB20FF15C027FF1FB83AFF108B1FF80B6E17E4005C
+        007000800000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00005100B7167A2AFF119922FF0F9D1DFF13A1
+        24FF17A62BFF1AAA32FF19B330FF15BE29FF12C723FF10CE1EFF0ED31BFF0ED4
+        1BFF0FD11CFF11CB20FF14C326FF17B92CFF1BAE33FF19A82FED1FA93CD40E77
+        1CBD005F0052FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF0000520098137125FF099312FF099712FF0D9B19FF119F
+        20FF15A427FF18A82EFF1BAB34FF18B42FFF16BC2AFF14C326FF12C623FF12C7
+        23FF13C524FF15C027FF17B92CFF1AB131FF1AAA32F017A62BD813A224BF1AA1
+        30A9086B12950064001FFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00005400640C5C18FF088D10FF059109FF08950FFF0B9916FF0F9D
+        1CFF12A123FF15A529FF18A82FFF1BAB34FF1AB131FF18B62DFF17B92CFF17BA
+        2BFF17B82CFF19B42FFF1BAE33FF1AAA32F017A62CDA14A326C2119F20AB0D9B
+        1996159A298205660B6D006A0008FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF0000550008064B0BEE0A7C15FF008C01FF039006FF06930BFF099611FF0C9A
+        18FF0F9E1EFF12A123FF15A429FF18A72DFF1BA932FF21AF3FFF20AE3FFF1CAE
+        35FF1CAC35FF1AAA32FB19A82FED17A62BDD14A326C511A021AE0E9C1B980B98
+        158407940E711390255F015E014500740001FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00025304910E5B1AFF007B00FF008800FF018E03FF049108FF07930DFF0997
+        12FF0D9A18FF0F9D1DFF19A230FF128823FF1B8537FF167029F516692AF31A70
+        33FF117121F81A9E34E915A428DA13A224C7119F20AF0E9C1B9A0B9916850895
+        107205920B6006910B500B6E16410267060CFFFFFF00FFFFFF00FFFFFF0000FF
+        000105460DF306640DFF007400FF008000FF008C00FF028E04FF049109FF0794
+        0DFF0B9916FF0D8A18FF137721FC117D2061137B1F1100AA2B0000552B001174
+        1F0A0D661A470E511CBC177D2EB80F9D1DA30D9B198C0B981578089510660693
+        0B5503900746018D02380B7E172C045F0716FFFFFF00FFFFFF00FFFFFF00035E
+        0A490A4714FF006000FF006B00FF007700FF008200FF008C00FF028F05FF0491
+        09FF0E881EFF0C6E19E60C7E1B17FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00116416020B4A145E117622700A97125F07940E5005920B420390
+        0736018D032B0088002105820B18075B0E1108700800FFFFFF00FFFFFF000656
+        0BA407480FFF005700FF006300FF006E00FF007900FF008300FF008C00FF078C
+        0FFF0B6113FB11771A23FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00106015020941123C0986133A05910930038F0627018D
+        021F00880017007E00100074000B0A67140706690E01FFFFFF00FFFFFF000650
+        0CD2044A0AFF004E00FF005900FF006400FF006E00FF007800FF008100FF0769
+        0FFF0A621293FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF0008501009085C121E02860517017803120167
+        030D035A050A035207060855100408591101FFFFFF00FFFFFF00FFFFFF00074C
+        0EE5024904FF004D00FF005000FF005A00FF006400FF006D00FF007600FF0754
+        0EFF0C611430FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF000755140005380A08053B0A0607420C030849
+        0E0108500F01FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF000848
+        10F40D570EFF0F5B0FFF125D12FF136113FF0F650FFF006200FF006900FF0849
+        0FFB00660003FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF000B601500FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00094B
+        12F5236C24FF267126FF267126FF267126FF226C22FF005600FF005C01FF0848
+        11FA00550002FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF002981
+        4445215A2EF707390EFF083C0EFF083F0FFE08410FFD084410FD094711FE094A
+        12FF0A5013FF0B5615FF0B5E17FF0D6A19E40F791B3BFFFFFF00FFFFFF000C51
+        15E5296E2AFF2E782EFF2E782EFF2E782EFF2F792FFF035003FF005100FF084A
+        10FF1067192AFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF002675
+        37280F5B1AFF01D101FF13E213FF25DD25FF26D226FF28C628FF28B828FF1DA5
+        1DFF0F900FFF007900FF006E00FF016401FF117B21EA00804000FFFFFF000F5D
+        1AD12D702EFF378137FF378137FF378137FF378137FF105A10FF004D00FF074A
+        0DFF0F621B82FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF000C52189A07550CFF00B901FF09C209FF24C424FF36C336FF37BA37FF37B2
+        37FF37A937FF369E36FF278E27FF167816FF148426FF209F2000FFFFFF001167
+        1FA4296A2DFF3F883FFF3F883FFF3F883FFF3F883FFF2F762FFF004D00FF024C
+        03FF0C5317FA146B1F16FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF000E561BA908560FFF00A000FF00A000FF0BA00BFF2CAB2CFF3FAF
+        3FFF3FAA3FFF3FA43FFF3F9E3FFF409840FF1B912EFF2BAA2B00FFFFFF001171
+        1E4D1B5A24FF489048FF489048FF489048FF489048FF4B924BFF1F671FFF004D
+        00FF054E09FF0C5516E01065201BFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF0012671E2A0B4A14F1027B03FF008B00FF008900FF2DA02DFF48AE
+        48FF48AA48FF48A548FF48A148FF499E49FF1B982DFF00993300FFFFFF000055
+        00030A5314F34E904EFF509850FF509850FF509850FF509850FF519551FF0B56
+        0BFF004D00FF044E08FF094910F90C5A16940F5D1932FFFFFF00FFFFFF00105E
+        1A260C581591084410F8036006FF007700FF007900FF1C8B1CFF50AF50FF50AD
+        50FF50AA50FF50A750FF50A450FF53A353FF189728FF00993300FFFFFF00FFFF
+        FF000A651695307034FF5AA05AFF59A059FF59A059FF59A059FF59A059FF5193
+        51FF0E580EFF004D00FF014D02FF05470AFF06410CFF07400DF7073F0DF6063C
+        0CFF054708FF015902FF006300FF006700FF208220FF54AB54FF59AE59FF59AD
+        59FF59AB59FF59AA59FF59A859FF5EA75EFF159423FF00BF4000FFFFFF00FFFF
+        FF00006A150B085710ED5B9C5CFF61A761FF61A761FF61A761FF61A761FF61A7
+        61FF63A663FF2F752FFF004D00FF004D00FF004D00FF024D02FF034E03FF004D
+        00FF005000FF005300FF095E09FF419241FF61AE61FF61AE61FF61AE61FF61AE
+        61FF61AD61FF61AC61FF61AB61FF67AD67FF129420FF00AA0000FFFFFF00FFFF
+        FF00FFFFFF000A690F66216A26FF6EAE6EFF6AAF6AFF6AAF6AFF6AAF6AFF6AAF
+        6AFF6AAF6AFF6CB06CFF5B9C5BFF387D38FF226922FF045104FF014E01FF165E
+        16FF287128FF428742FF60A760FF6AB26AFF6AB26AFF6AB26AFF6AB26AFF6AB2
+        6AFF6AB26AFF6AB16AFF6AB16AFF72B472FF0F941AFF00800000FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF0007670D9C347E39FF79BA79FF72B772FF72B772FF72B7
+        72FF72B772FF72B772FF72B772FF72B772FF72B772FF7ABA7AFF75B675FF73B8
+        73FF72B772FF72B772FF72B772FF72B772FF72B872FF72B872FF72B872FF7ABB
+        7AFF74B475FF7BBB7BFF72B772FF7BBC7BFF0C9214FF00800000FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF0000FF000105690ABB3E8A40FF81C081FF7BBF7BFF7BBF
+        7BFF7BBF7BFF7BBF7BFF7BBF7BFF7BBF7BFF7BBF7BFF7BBF7BFF7BBF7BFF7BBF
+        7BFF7BBF7BFF7BBF7BFF7BBF7BFF7BBF7BFF7BBF7BFF7BBF7BFF80C080FF4896
+        4BFF06790BDE2E9032FF80C080FF85C485FF099110FF00FF0000FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00008000020370079828832AFF84C084FF86C8
+        86FF83C783FF83C783FF83C783FF83C783FF83C783FF83C783FF83C783FF83C7
+        83FF83C783FF83C783FF83C783FF83C783FF84C784FF6CB36CFF1C7D1DFF0376
+        079B00800004048108882F9630FF94CC94FF049108FFFFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0000790361037404EB59A1
+        59FF97CE97FF90D190FF8BCF8BFF8BCF8BFF8BCF8BFF8BCF8BFF8BCF8BFF8BCF
+        8BFF8BCF8BFF8BCF8BFF90D190FF8FCA8FFF429142FF026E03EE0073026AFFFF
+        FF00FFFFFF00FFFFFF00028604835AB05BFF4EB04FEEFFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00006A000C0073
+        0085037003F04B974BFF7EB87EFF98CD98FFA2D6A2FFABDEABFFA7DCA7FF95D1
+        95FF80C280FF6DB06DFF4F984FFF046D04F30070008F0080000EFFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF003EA73E1C7CC47C34FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00008000040072004A137A13A3348A34D8589C58EE80B280FD94C094FD77AF
+        77F2559C55DE328A32AE0F780F5300800006FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0000FF0001FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+        FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
+      }
+      TabOrder = 2
+      OnClick = btRefreshClick
+    end
   end
   object Panel1: TPanel
     Left = 0
-    Height = 277
+    Height = 281
     Top = 0
     Width = 458
     Align = alClient
     BevelInner = bvRaised
-    ClientHeight = 277
+    ClientHeight = 281
     ClientWidth = 458
     TabOrder = 1
     object lvSources: TListView
       Left = 2
-      Height = 273
+      Height = 277
       Top = 2
       Width = 454
       Align = alClient
@@ -73,7 +213,7 @@ object TwainSelectSource: TTwainSelectSource
           Width = 87
         end      
         item
-          Width = 266
+          Width = 316
         end>
       ColumnClick = False
       HideSelection = False
