@@ -1,9 +1,12 @@
 Main:
   Aggiornare le miniature dopo un Re-Take  (è solo un refresh della lista)
   Animazione durante la scansione
+  Take attivo con nessuna Crop Area?
+
 
 Twain:
-  In Realease non avvia subito il 32bit e non lo chiude in uscita (singola istanza?)
+  avvia con scanner spento, fai Retry..il primo Take è ok, il secondo Take usa "TWAIN2 FreeImage Software Scanner" ??
+xTestare di più(Risolto?)  In Realease non avvia subito il 32bit e non lo chiude in uscita (singola istanza?)
   Inviare Dimensioni  Pagina / DPI allo Scanner
   DPI Minori (100?) nel preview
 
